syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Melo04/grpc-chat/pb";

service ChatServer {
    // Unary RPC to login
    rpc Login(LoginRequest) returns (LoginResponse) {}

    // Unary RPC to create a new chat server
    rpc CreateChatServer(CreateChatServerRequest) returns (CreateChatServerResponse) {}

    // Unary RPC to join a chat server
    rpc JoinChatServer(JoinChatServerRequest) returns (JoinChatServerResponse) {}

    // Unary RPC to leave a chat server
    rpc LeaveChatServer(LeaveChatServerRequest) returns (LeaveChatServerResponse) {}

    // Server streaming RPC to list messages in a chat server
    rpc ListMessages(ListMessagesRequest) returns (stream Message) {}

    // Client Streaming RPC to send messages to a chat server
    rpc SendMessages(stream SendMessageRequest) returns (SendMessagesResponse) {}

    // Bidirectional streaming RPC to chat in a chat server
    rpc Chat(stream ChatMessage) returns (stream ChatMessage) {}
}

message Message {
    string username = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string message = 2;
}

message CreateChatServerRequest {
    string server_name = 1;
}

message CreateChatServerResponse {
    string server_id = 1;
}

message JoinChatServerRequest {
    string server_id = 1;
    string username = 2;
}

message JoinChatServerResponse {
    string welcome_message = 1;
}

message LeaveChatServerRequest {
    string server_id = 1;
    string username = 2;
}

message LeaveChatServerResponse {
    string goodbye_message = 1;
}

message ListMessagesRequest {
    string server_id = 1;
    string channel_id = 2;
}

message SendMessageRequest {
    string server_id = 1;
    string channel_id = 2;
    string username = 3;
    string text = 4;
}

message SendMessagesResponse {
    int32 message_count = 1;
}

message ChatMessage {
    string server_id = 1;
    string channel_id = 2;
    string username = 3;
    string text = 4;
    google.protobuf.Timestamp timestamp = 5;
}